--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.4.2",
-    "lodash": "^4.17.14"
+    "lodash": "^4.17.14",
+    "mongoose": "^5.6.6"
   },
   "devDependencies": {}
 }
