--- a/server/package.json
+++ b/server/package.json
@@ -16,5 +16,7 @@
     "lodash": "^4.17.14",
     "mongoose": "^5.6.6"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "dotenv": "^8.0.0"
+  }
 }
